Fixed navbar wrapping issue (not perfect tho)

--- a/source/styles/top-nav-style.css
+++ b/source/styles/top-nav-style.css
@@ -10,6 +10,7 @@ nav.top-nav a {
 	font-size: 16px;
 	text-decoration: none;
 	width: 100%;
+	white-space: nowrap;
 }
 
 nav.top-nav li:hover > a {
